style.css
* {
    margin: 0;
    padding: 0;
    position: relative;
    box-sizing: border-box;
    text-decoration: none;
    color: white;
    font-family: Montserrat;
}

.max-width-1920 {
    max-width: 1920px;
    margin: auto;
}

.bg-header-footer {
    background-color: rgb(22, 11, 44);
}

.padding-20 {
    padding: 10px 20px;
}

.padding-50 {
    padding: 0px 50px;

    @media (max-width:600px){
        padding: 20px 
    }
}

.hover-glow:hover {
    cursor: pointer;
    filter: drop-shadow(0px 0px 5px white);
}

.bold {
    font-weight: bold;
}

h2 {
    font-size: 40px;
    @media (max-width:600px){
        font-size: 26px;
    }
}

header {
    height: 120px;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: flex-start;
    font-size: 40px;
    border-bottom: solid white 2px;
    @media (max-width:450px){
        font-size: 30px;
    }

    #header-bar {
        display: flex;
        justify-content: flex-start;
        width: 100%;

        #logo {
            display: flex;
            justify-content: flex-start;
            align-items: center;
            width: 15%;
            gap: 10px;

            img {
                height: 80px;
                @media (max-width:450px){
                    height: 60px;
                }
            }
        }
    }
}

main {
    min-height: calc(100dvh - 120px - 120px);
    background-image: linear-gradient(
        180deg,
        rgb(63, 16, 82),
        rgb(94, 22, 128),
        rgb(88, 10, 75),
        rgb(88, 10, 62)
    );
    #main-div {
        padding: 50px 0px;
        display: flex;
        flex-direction: column;
        gap: 60px;

        #favorite-books {
            display: flex;
            flex-direction: column;
            gap: 20px;
            img {
                height: 60px;
                vertical-align: bottom;
            }
        }

        #favoriteBooks {
            display: flex;
            flex-direction: column;
            gap: 20px;
        }

        #read-books {
            display: flex;
            flex-direction: column;
            gap: 40px;

            
        }

        .sort-book-cards{
                display: flex;
                justify-content: space-between;
                flex-wrap: wrap;
                gap: 60px;
            }
    }
}

footer {
    height: 120px;
    width: 100%;
    border-top: solid white 2px;
    display: flex;
    align-items: center;

    #footer-div {
        width: 100%;
        display: flex;
        justify-content: space-between;
        align-items: center;

        .footer-left {
            width: 50%;
            display: flex;
            justify-content: flex-start;
            align-items: center;
            gap: 20px;
            color: rgb(99, 99, 99);

            @media (max-width:700px) {
                font-size: 12px; 
            }

            img {
                height: 60px;
            }
        }

        .footer-right {
            width: 50%;
            display: flex;
            justify-content: flex-end;
            gap: 40px;
            font-size: 20px;

            @media (max-width:700px) {
                font-size: 16px; 
                flex-direction: column;
                align-items: flex-end;
                gap: 10px;
            }

            a:hover {
                cursor: pointer;
                text-decoration: underline;
            }
        }
    }
}

.book-card {
    background-color: rgb(43, 21, 44);
    filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.493));
    height: auto;
    width: 30%;
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    font-size: 18px;

    @media (max-width: 1320px) {
        width: 47%;
    }
    
    @media (max-width: 1120px) {
        width: 46%;
    }

    @media (max-width: 930px) {
        width: 100%;
    }



    h3 {
        font-size: 32px;
        @media (max-width:600px){
        font-size: 24px;}
    }

    .book-infos {
        display: flex;
        flex-direction: column;
        gap: 40px;
        border-top: solid white 4px;
        border-bottom: solid white 4px;
        padding-bottom: 40px;

        .price-and-likes {
            display: flex;
            justify-content: space-between;
            align-items: center;

            .price {
                font-size: 26px;
                font-weight: bold;
                color: #d06cbc;
            }

            #likes {
                display: flex;
                align-items: center;
                font-size: 20px;
                gap: 10px;

                img {
                    height: 60px;
                    @media (max-width:450px){
                        height: 40px;
                    }
                }
            }
        }

        .info-list {
            display: flex;
            flex-direction: column;
            gap: 10px;
            font-size: 20px;

            .info-pair {
                display: flex;
                align-items: center;
                gap: 40px;
            }
        }

        
    }

    .comment-section {
        display: flex;
        flex-direction: column;
        gap: 20px;
        padding: 30px 20px;
        height: 200px;
        overflow: auto;
        
        h4 {
            font-size: 22px;
        }
        
        .comment-content {
            display: flex;
            flex-direction: column;
            gap: 10px;
            

            .reader {
                color:#d06cbc;
            }

        }

        
    }
    form {
        display: flex;
        justify-content: space-between;
        text-align: center;
        gap: 20px;
        width: 100%;
        background-color: #000000;

        img{
            height: 40px;
            @media (max-width:450px){
                height: 30px;
            }
        }
        
        input {
            width: 100%;
            border-radius: 10px;
            padding: 10px;
            background-color: #b462a433;
            color: white;
            border: rgba(255, 255, 255, 0.26) inset 1px;
        }
    }
}

